# nfl-draft-nlp

./: .gitignore  README.md  build_annotations.py  build_annotations_tokens.py  build_html.py  draft_cards.html  inspect_nb.py  pyproject.toml  text_classification_task_cut.ipynb  year_summary.py
.claude/: settings.local.json
notebooks/: annual_tf_idf_made_it_analysis.ipynb  bin_tfidf_model.ipynb  db_language_analysis.ipynb  eda_adjectives_by_position.ipynb  eda_talent_motor_strengths.ipynb  grade_text_vs_grade.ipynb  lda_topic_discovery.ipynb  legacy_annual_tf_idf.ipynb  lr_tfidf_made_it.ipynb  nfl_pillar_Scoring_proportion_v1.ipynb  nfl_pillar_analysis_v3.ipynb  nfl_pillar_scoring.ipynb  nfl_pillar_scoring_NP_v2.ipynb  nfl_pillar_scoring_v3.ipynb  nfl_pre_proc.ipynb  pillar_scoring_comparison_README.md  pillar_scoring_np.ipynb  pillar_scoring_pos_group_year.ipynb  pillar_scoring_tokens.ipynb  preprocessing_wordcloud.ipynb  rf_categories_made_it.ipynb  rf_combined_made_it.ipynb  rf_pillar.ipynb  rf_position_stratified.ipynb  rf_scores_made_it.ipynb  rf_text_made_it.ipynb  rf_two_stage_residual.ipynb  scouting_alpha_nlp.ipynb  seed_disambiguation_diagnostic.ipynb  technique_vocabulary_discovery.ipynb  w2v_pillar_lexicon.ipynb
notebooks/adhoc/: grade_vs_second_contract.ipynb  nfl_pillar_Scoring_v3.ipynb  nfl_pillar_Scoring_v3.py  nfl_pillar_analysis_v3.ipynb  nfl_pillar_scoring.ipynb  nfl_pillar_scoring_v2.ipynb  nfl_pillar_scoring_v3_no_stitching.ipynb  rf_pillar.ipynb  seed_disambiguation_diagnostic_README.md  technique_vocabulary_discovery.ipynb  text_signal_success_analysis.ipynb  w2v_pillar_lexicon.ipynb
scripts/: analyze_contracts.py  combine_nfl_com.py  contracts_nflreadr.R  join_contracts.py
scripts/analysis/: __init__.py  db_ngram_trends.py  qb_topics.py  rank_terms.py  sw_frequency.py  sw_scatter.py
scripts/scraper/: scrape_nfldraftbuzz.py  scrape_player_pages.py
src/nfl_draft_nlp/: __init__.py
