[project]
name = "nfl-draft-nlp"
version = "0.1.0"
description = "Text mining pipeline for NFL draft analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.3",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "pytest>=8.3.4",
  "ruff>=0.9.5",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
