[project]
name = "nfl-draft-nlp"
version = "0.1.0"
description = "Text mining pipeline for NFL draft analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "curl-cffi>=0.14.0",
  "gensim>=4.4.0",
  "lxml>=6.0.2",
  "matplotlib>=3.10.8",
  "nbconvert>=7.17.0",
  "nbformat>=5.10.4",
  "nltk>=3.9.3",
  "pandas>=2.2.3",
  "rapidfuzz>=3.14.3",
  "requests>=2.32.5",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "spacy>=3.8.11",
  "statsmodels>=0.14.6",
  "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "pytest>=8.3.4",
  "ruff>=0.9.5",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
